public/style.css
/* PrismJS 1.20.0
https://prismjs.com/download.html#themes=prism-tomorrow&languages=markup+clike+javascript+elixir+javadoclike+markup-templating+php+phpdoc+php-extras */
/**
 * prism.js tomorrow night eighties for JavaScript, CoffeeScript, CSS and HTML
 * Based on https://github.com/chriskempson/tomorrow-theme
 * @author Rose Pritchard
 */

 code[class*="language-"],
 pre[class*="language-"] {
     color: #ccc;
     background: none;
     font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
     font-size: 1em;
     text-align: left;
     white-space: pre;
     word-spacing: normal;
     word-break: normal;
     word-wrap: normal;
     line-height: 1.5;
 
     -moz-tab-size: 4;
     -o-tab-size: 4;
     tab-size: 4;
 
     -webkit-hyphens: none;
     -moz-hyphens: none;
     -ms-hyphens: none;
     hyphens: none;
 
 }
 
 /* Code blocks */
 pre[class*="language-"] {
     padding: 1em;
     margin: .5em 0;
     overflow: auto;
 }
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
     background: #2d2d2d;
     border-radius: 4px;
 }
 
 /* Inline code */
 :not(pre) > code[class*="language-"] {
     padding: .1em;
     border-radius: .3em;
     white-space: normal;
 }
 
 .token.comment,
 .token.block-comment,
 .token.prolog,
 .token.doctype,
 .token.cdata {
     color: #999;
 }
 
 .token.punctuation {
     color: #ccc;
 }
 
 .token.tag,
 .token.attr-name,
 .token.namespace,
 .token.deleted {
     color: #e2777a;
 }
 
 .token.function-name {
     color: #6196cc;
 }
 
 .token.boolean,
 .token.number,
 .token.function {
     color: #f08d49;
 }
 
 .token.property,
 .token.class-name,
 .token.constant,
 .token.symbol {
     color: #f8c555;
 }
 
 .token.selector,
 .token.important,
 .token.atrule,
 .token.keyword,
 .token.builtin {
     color: #cc99cd;
 }
 
 .token.string,
 .token.char,
 .token.attr-value,
 .token.regex,
 .token.variable {
     color: #7ec699;
 }
 
 .token.operator,
 .token.entity,
 .token.url {
     color: #67cdcc;
 }
 
 .token.important,
 .token.bold {
     font-weight: bold;
 }
 .token.italic {
     font-style: italic;
 }
 
 .token.entity {
     cursor: help;
 }
 
 .token.inserted {
     color: green;
 }
 
 

body {
    font-family:  Georgia, 'Times New Roman', Times, serif;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
}

a {
    color: #6f42c1;
}

h3 {
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    margin-bottom: 10px;
    color: inherit;
    font-family: Georgia,serif;
    font-weight: 900;
    text-rendering: optimizeLegibility;
    font-size: 1.4427rem;
    line-height: 1.1;
}

.wrapper {
    margin-left: auto;
    margin-right: auto;
    max-width: 42rem;
    padding: 2.625rem 1.3125rem;
}

.post-listing {
    margin-bottom: 40px;
}

.heading--title {
    font-size: 56px;
    margin-bottom: 70px;
    margin-top: 0px;
}

.heading--title a {
    color: #202020;
}

.heading--home {
    font-size: 26px;
}

.heading--home a {
    color: #6f42c1;
}

.heading--post a {
    color: #5e5cbf;
    text-transform: capitalize;
}

.heading a {
    text-decoration: none;
}

.heading a:hover {
    color: #202020;
}

.post .heading {
    font-size: 36px;
}

p code {
    color: #222;
    background: #fde2e2;
    border-radius: 4px;
    padding: 2px 4px;
    font-family: Consolas,Menlo,Monaco,source-code-pro,Courier New,monospace;
    font-feature-settings: normal;
    font-size: 14px;
    text-align: left;
    white-space: pre;
    word-spacing: normal;
    word-break: normal;
    word-wrap: normal;
    line-height: 1.5;
    margin-bottom: 0;
    -moz-tab-size: 4;
    -o-tab-size: 4;
    tab-size: 4;
    -webkit-hyphens: none;
    -ms-hyphens: none;
    hyphens: none;
}

p {
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    margin-bottom: 1.75rem;
    line-height: 1.5;
}

.post-footer hr {
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    margin-bottom: calc(1.75rem - 1px);
    background: hsla(0,0%,0%,0.2);
    border: none;
    height: 1px;
}

ul {
    margin-left: 1.75rem;
    margin-right: 0;
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    margin-bottom: 1.75rem;
    list-style-position: outside;
    list-style-image: none;
    list-style: disc;
}

li {
    padding-left: 0;
    margin-bottom: 20px;
}

blockquote {
    margin-left: -1.75rem;
    margin-right: 1.75rem;
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 1.42188rem;
    padding-right: 0;
    padding-top: 0;
    margin-bottom: 1.75rem;
    font-size: 1.20112rem;
    line-height: 1.75rem;
    color: hsla(0,0%,0%,0.59);
    font-style: italic;
    border-left: 0.32813rem solid hsla(0,0%,0%,0.9);
}

.blurb {
    margin-bottom: 10px;
    display: flex;
    align-items: center;
}

.blurb--title {
    margin-bottom: 50px;
}

.blurb img, .blurb p {
    display: inline-block;
    margin-right: 20px;
    margin-bottom: 20px;
    vertical-align: middle;
}

/**
 subscription form
*/
.subscription {
    margin-bottom: 25px;
}

.subscription__label {
    display: none;
}

.subscription__input {
    appearance: none;
    background-color: rgb(255, 255, 255);
    border: 0px;
    border-radius: 0.1875rem;
    box-sizing: border-box;
    box-shadow: rgb(221 54 42) 0px 0px 0px 1px, rgb(232 82 68) 0px 0px 4px 0px, rgb(232 82 68) 0px 0px 2px -2px;
    color: rgb(67, 77, 93);
    font-size: 0.875rem;
    line-height: 1.5;
    min-height: 2.8125rem;
    outline: 0px;
    padding: 0.75rem 1rem;
    transition: box-shadow 0.2s ease 0s;
    width: 100%;
    margin-bottom: 15px;
}

.subscription__button {
    background-color: rgb(123, 177, 61);
    border: none;
    border-radius: 3px;
    color: rgb(255, 255, 255);
    display: inline-block;
    font-family: Helvetica, Arial, sans-serif;
    font-size: 1rem;
    font-style: normal;
    font-weight: 700;
    line-height: 1;
    outline: 0px;
    padding: 0.75rem 1.5rem;
    text-decoration: none;
    transition: background-color 0.1s ease-in 0s, box-shadow 0.1s ease-in 0s;
    cursor: pointer;
}

.subscription__button:focus {
    outline: 2px solid rgb(96 157 25);
}

.separator {
    margin-bottom: 20px;
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    margin-bottom: calc(1.75rem - 1px);
    background: hsla(0,0%,0%,0.2);
    border: none;
    height: 1px;
}

